# dump-deps-exercise

./: Deps.hs  README.md  deps.cabal
demo/: A.hs  B.hs  C.hs  D.hs  E.hs  F.hs  G.hs
src/: Chns.hs  Deps.hs  Domain.hs  Graph.hs  Imps.hs  Main.hs  Parse.hs  Types.hs  Typs.hs
test/: Test.hs  Tests.hs
