name: deps
version: 0.0.0
build-type: Simple
cabal-version: >= 1.24.2.0

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Deps,
    Types,
    Graph,
    Parse
  build-depends:
    base,
    ghc,
    ghc-paths,
    filemanip,
    fgl

test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base,
    hspec,
    raw-strings-qq,
    process,
    deps

executable deps
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    deps,
    ghc,
    ghc-paths,
    filemanip,
    fgl,
    optparse-applicative