name: deps
version: 0.0.0
build-type: Simple
cabal-version: >= 1.24.2.0

library
  hs-source-dirs: src
  exposed-modules:
    Deps,
    Imps,
    Chns,
    Typs
  build-depends:
    base,
    ghc,
    ghc-paths,
    filemanip,
    mtl,
    monad-loops,
    containers

test-suite test
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base,
    deps,
    hspec,
    raw-strings-qq,
    process,
    containers

executable deps
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    deps,
    ghc,
    ghc-paths,
    filemanip,
    mtl,
    optparse-applicative,
    monad-loops,
    containers